[package]
name = "kdmapper-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "processthreadsapi",
    "tlhelp32",
    "handleapi",
    "sysinfoapi",
    "errhandlingapi",
    "winsvc",
    "libloaderapi",
    "ioapiset",
] }
